--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# Nome da aplicação
 spring.application.name=todosimple
+
+# Isso aqui era para deixar o terminal colorido, mas pode depender do suporte do terminal
+spring.output.ansi.enabled=ALWAYS
+
+# Configurações do Banco de Dados
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/todosimple?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Configuração do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
